# rebasenx-xorg-lib-libXau

./: .cvsignore  .gitignore  AuDispose.c  AuFileName.c  AuGetAddr.c  AuGetBest.c  AuLock.c  AuRead.c  AuUnlock.c  AuWrite.c  ChangeLog  Makefile.am  Xau.man  configure.ac  xau.pc.in
include/X11/: Xauth.h
man/: Xau.man
